--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,16 @@ python = "^3.12"
 fastapi = "^0.112.0"
 uvicorn = "^0.30.6"
 boto3 = "^1.35.1"
+boto3-stubs = {extras = ["kinesis"], version = "^1.35.7"}
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+isort = "^5.13.2"
+flake8 = "^7.1.1"
+pre-commit = "^3.8.0"
+httpx = "^0.27.2"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
